Spotify Integration Improvements

--- a/src/Churchee.Module.Podcasts.Spotify/Areas/Integrations/Pages/Spotify.razor
+++ b/src/Churchee.Module.Podcasts.Spotify/Areas/Integrations/Pages/Spotify.razor
@@ -44,7 +44,25 @@ else
             </Form>
         </RadzenColumn>
         <RadzenColumn class="rz-p-5">
-            Column 2 of 4
+            
+            <h3>Configuration Instructions</h3>
+
+            <p>Log in to <a href="https://podcasters.spotify.com/pod/login" target="_blank">https://podcasters.spotify.com/pod/login</a></p>
+
+            <div class="text-center">
+                <img class="rz-p-10 rounded" src="/_content/Churchee.Module.Podcasts.Spotify/img/spotify-login.png" />
+            </div>
+
+            <p>Once the home screen has loaded, click the "Profile Page" button, located next to the "Share" button</p>
+
+            <div class="text-center">
+                <img class="rz-p-10 rounded" src="/_content/Churchee.Module.Podcasts.Spotify/img/spotify-home.png" />
+            </div>
+
+            <p>Finally, click the RSS feed button to copy the RSS feed URL:
+                <RadzenIcon Icon="rss_feed" IconColor="#fff" Style="background: #fe8a4c"></RadzenIcon>
+            </p>
+
         </RadzenColumn>
     </RadzenRow>
 }
