--- a/src/Churchee.Module.Identity/Areas/Account/Pages/_LoginLayout.cshtml
+++ b/src/Churchee.Module.Identity/Areas/Account/Pages/_LoginLayout.cshtml
@@ -3,7 +3,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy"
+          content="base-uri 'self';
+               default-src 'self';
+               img-src data: https:;
+               object-src 'none';
+               script-src 'self';
+               style-src 'self' fonts.googleapis.com;
+               font-src fonts.gstatic.com;
+               upgrade-insecure-requests;">
     <title>@ViewData["Title"]</title>
+    <link rel="icon" href="/favicon.png" sizes="any">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/_content/Churchee.Module.Identity/css/login.min.css" asp-append-version="true" />
@@ -15,11 +25,6 @@
         @RenderBody()
 
     </main>
-
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <partial name="_ValidationScriptsPartial" />
 
 </body>
 </html>
