--- a/src/Churchee.Module.Identity/Areas/Account/Pages/_LoginLayout.cshtml
+++ b/src/Churchee.Module.Identity/Areas/Account/Pages/_LoginLayout.cshtml
@@ -11,6 +11,7 @@
                script-src 'self';
                style-src 'self' fonts.googleapis.com;
                font-src fonts.gstatic.com;
+               frame-ancestors 'none';
                upgrade-insecure-requests;">
     <title>@ViewData["Title"]</title>
     <link rel="icon" href="/favicon.png" sizes="any">
