CSP Fix and Removal or Templaye Blazor Files

--- a/src/Churchee.Module.Identity/Areas/Account/Pages/_LoginLayout.cshtml
+++ b/src/Churchee.Module.Identity/Areas/Account/Pages/_LoginLayout.cshtml
@@ -4,15 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy"
-          content="base-uri 'self';
-               default-src 'self';
-               img-src data: https:;
-               object-src 'none';
-               script-src 'self';
-               style-src 'self' fonts.googleapis.com;
-               font-src fonts.gstatic.com;
-               frame-ancestors 'none';
-               upgrade-insecure-requests;">
+          content="default-src 'self';
+                   img-src data: https:;
+                   object-src 'none';
+                   script-src 'self';
+                   style-src 'self' fonts.googleapis.com;
+                   font-src fonts.gstatic.com;
+                   frame-ancestors 'none';
+                   upgrade-insecure-requests;">
     <title>@ViewData["Title"]</title>
     <link rel="icon" href="/favicon.png" sizes="any">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
