--- a/src/Churchee.Module.Identity/Areas/Account/Pages/_LoginLayout.cshtml
+++ b/src/Churchee.Module.Identity/Areas/Account/Pages/_LoginLayout.cshtml
@@ -3,15 +3,6 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Security-Policy"
-          content="default-src 'self';
-                   img-src data: https:;
-                   object-src 'none';
-                   script-src 'self';
-                   style-src 'self' fonts.googleapis.com;
-                   font-src fonts.gstatic.com;
-                   frame-ancestors 'none';
-                   upgrade-insecure-requests;">
     <title>@ViewData["Title"]</title>
     <link rel="icon" href="/favicon.png" sizes="any">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -25,7 +16,8 @@
         @RenderBody()
 
     </main>
-
+    <script src="/js/aspnet-validation.min.js"></script>
+    <script src="/_content/Churchee.Module.Admin/js/churchee.js"></script>
 </body>
 </html>
 
