--- a/src/Churchee.Presentation.Admin/Components/Routes.razor
+++ b/src/Churchee.Presentation.Admin/Components/Routes.razor
@@ -1,6 +1,6 @@
 ﻿
 @{
-    var assemblies = Comgem.Common.Helpers.AssemblyResolution.GetModuleAssemblies().ToArray();
+    var assemblies = Churchee.Common.Helpers.AssemblyResolution.GetModuleAssemblies().ToArray();
 }
 
 <Router AppAssembly="@typeof(Program).Assembly" AdditionalAssemblies="assemblies">
