Reverted to web-safe fonts and turned logo font into SVGs

--- a/src/Churchee.Module.Identity/Areas/Account/Pages/Login.cshtml
+++ b/src/Churchee.Module.Identity/Areas/Account/Pages/Login.cshtml
@@ -9,7 +9,7 @@
 
     <section class="login-section bg-gradient-primary-to-secondary">
         <form id="account" method="post" autocomplete="off">
-            <h1>Log in to: <strong>Churchee</strong></h1>
+            <h1>Log in to: <a href="/"><img class="logo" src="/img/churchee-gradient.svg" alt="churchee logo with a blue gradient" /></a></h1>
             <hr />
 
             @Html.AntiForgeryToken()
