--- a/src/Churchee.Module.Identity/wwwroot/css/login.css
+++ b/src/Churchee.Module.Identity/wwwroot/css/login.css
@@ -8,16 +8,6 @@ html, body {
   font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-strong {
-  font-family: "Pacifico", cursive;
-  text-align: center;
-  margin: 0 auto 0;
-  color: #3971c1;
-  background: -webkit-linear-gradient(#6c757d, #0d6efd);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
 h1 {
   text-align: center;
   font-size: 2.1em;
@@ -52,6 +42,9 @@ h1 {
   border-top-color: currentcolor;
   border-top: 1px solid;
   opacity: 0.25;
+}
+.login-section .logo {
+  height: 2.2rem;
 }
 
 button {
