--- a/src/Churchee.Module.UI/Components/Breadcrumb.razor
+++ b/src/Churchee.Module.UI/Components/Breadcrumb.razor
@@ -1,11 +1,12 @@
 ﻿@using Churchee.Module.UI.Models
+@using Radzen.Blazor
 @using Microsoft.AspNetCore.Components.Routing
 @inject NavigationManager NavigationManager
 @inject CurrentPage currentPage;
 
 <div class="rz-breadcrumb">
 
-            <div class="rz-breadcrumb-item"><a href="/management"><i class="fa fa-home"></i></a></div>
+            <div class="rz-breadcrumb-item"><a href="/management"><RadzenIcon Icon="home"></RadzenIcon></a></div>
 
             @foreach(var item in GetLoop()){
 
