Breadcrumb and Logo Improvements

--- a/src/Churchee.Module.UI/Components/Breadcrumb.razor
+++ b/src/Churchee.Module.UI/Components/Breadcrumb.razor
@@ -6,7 +6,7 @@
 
 <div class="rz-breadcrumb">
 
-            <div class="rz-breadcrumb-item"><a href="/management"><RadzenIcon Icon="home"></RadzenIcon></a></div>
+            <div class="rz-breadcrumb-item"><a class="home-link" href="/management"><RadzenIcon Icon="home"></RadzenIcon></a></div>
 
             @foreach(var item in GetLoop()){
 
