--- a/src/Churchee.Module.UI/Components/Logo.razor.css
+++ b/src/Churchee.Module.UI/Components/Logo.razor.css
@@ -7,7 +7,8 @@
 
     .logo img {
         height: 1.7rem;
-        margin-bottom: 0.1rem;
+        margin-bottom: 0.2rem;
         -webkit-filter: invert(1);
         filter: invert(1);
+        min-width: 6rem;
     }
