Fixes/Suppresses Section Subscription Issue

--- a/src/Churchee.Presentation.Admin/Components/Layout/MainLayout.razor
+++ b/src/Churchee.Presentation.Admin/Components/Layout/MainLayout.razor
@@ -8,7 +8,14 @@
             <RadzenSidebarToggle Click="@(() => sidebarExpanded = !sidebarExpanded)" />
             <Logo />
             <Breadcrumb>
+                <ErrorBoundary>
+                    <ChildContent>
                 <SectionOutlet SectionName="top-bar" />
+                    </ChildContent>
+                    <ErrorContent>
+                        ...
+                    </ErrorContent>
+                </ErrorBoundary>
             </Breadcrumb>
             
         <ProfileMenu></ProfileMenu>
