--- a/src/Churchee.Module.Identity/Areas/Profile/Pages/Password.razor
+++ b/src/Churchee.Module.Identity/Areas/Profile/Pages/Password.razor
@@ -4,53 +4,56 @@
 
 <PageName Name="Password"></PageName>
 
-<h3>Password</h3>
 ﻿@if (_user == null)
 {
     <div>Loading...</div>
 }
 else
 {
-    <div class="card">
-        <div class="card-body">
-            <div class="row">
-                <div class="col-md-4">
-                    <EditForm Model="@_model" OnValidSubmit="OnValidSubmit">
-                        <DataAnnotationsValidator />
+        <RadzenRow Gap="2rem" RowGap="2rem" class="rz-m-0 rz-m-md-12">
 
-                        <div class="form-floating mb-3">
-                            <InputText @bind-Value="_model.OldPassword" type="password" class="form-control" id="floatingOldPassword" />
-                            <label for="floatingOldPassword">Current Password</label>
-                            <ValidationMessage For="@(() => _model.OldPassword)" />
-                        </div>
+            <RadzenColumn Size="12" SizeMD="4">
+               <EditForm Model="@_model" OnValidSubmit="OnValidSubmit">
+                                <DataAnnotationsValidator />
 
-                        <div class="form-floating mb-3">
-                            <InputText @bind-Value="_model.NewPassword" type="password" class="form-control" id="floatingNewPassword" />
-                            <label for="floatingNewPassword">New Password</label>
-                            <ValidationMessage For="@(() => _model.NewPassword)" />
-                        </div>
+                                <RadzenStack>
 
-                        <div class="form-floating mb-3">
-                            <InputText @bind-Value="_model.ConfirmPassword" type="password" class="form-control" id="floatingConfirmPassword" />
-                            <label for="floatingConfirmPassword">Confirm new password</label>
-                            <ValidationMessage For="@(() => _model.ConfirmPassword)" />
-                        </div>
+                                    <RadzenFormField Text="Old Password">
+                                        <ChildContent>
+                                            <RadzenPassword @bind-Value="_model.OldPassword" id="floatingOldPassword" />
+                                        </ChildContent>
+                                        <Helper>
+                                            <ValidationMessage For="@(() => _model.OldPassword)" />
+                                        </Helper>
+                                    </RadzenFormField>
 
+                                    <RadzenFormField Text="New Password">
+                                        <ChildContent>
+                                            <RadzenPassword @bind-Value="_model.NewPassword" id="floatingNewPassword" />
+                                        </ChildContent>
+                                        <Helper>
+                                            <ValidationMessage For="@(() => _model.NewPassword)" />
+                                        </Helper>
+                                    </RadzenFormField>
 
-                        <div class="d-grid mb-2">
-                            <button disabled="@_isLoading" class="btn btn-lg btn-primary btn-login fw-bold text-uppercase">
-                                Save
-                                @if (_isLoading)
-                                {
-                                    <span class="spinner-border spinner-border-sm mr-1"></span>
-                                }
-                            </button>
-                        </div>
-                    </EditForm>
-                </div>
-            </div>
-        </div>
-    </div>
+                                    <RadzenFormField Text="Confirm Password">
+                                        <ChildContent>
+                                            <RadzenPassword @bind-Value="_model.ConfirmPassword" id="floatingConfirmPassword" />
+                                        </ChildContent>
+                                        <Helper>
+                                            <ValidationMessage For="@(() => _model.ConfirmPassword)" />
+                                        </Helper>
+                                    </RadzenFormField>
+
+                                    <RadzenButton Text="Submit" ButtonStyle="ButtonStyle.Success" ButtonType="ButtonType.Submit" Disabled="@_isLoading" />
+
+                                </RadzenStack>
+
+                            </EditForm>
+            </RadzenColumn>
+
+        </RadzenRow>
+
 }
 
 
@@ -106,7 +109,7 @@ else
 
             else
             {
-                _notificationService.Notify(NotificationSeverity.Success, "Failed to Update Password");
+                _notificationService.Notify(NotificationSeverity.Error, "Failed to Update Password");
             }
         }
         catch (Exception)
