Added HIBP Check to Password updates

--- a/src/Churchee.Module.Identity/Areas/Profile/Pages/Password.razor
+++ b/src/Churchee.Module.Identity/Areas/Profile/Pages/Password.razor
@@ -1,6 +1,8 @@
 ﻿@page "/management/profile/password"
 @using Churchee.Common.Abstractions.Utilities
 @using System.Security.Claims
+@using Churchee.Module.Identity.Features.HIBP.Queries
+@using MediatR
 
 <PageName Name="Password"></PageName>
 
@@ -60,6 +62,9 @@ else
 @code {
 
     [Inject]
+    private IMediator _mediator { get; set; }
+
+    [Inject]
     private ChurcheeUserManager _userManager { get; set; }
 
     [Inject]
@@ -100,6 +105,25 @@ else
 
             var id = _context.HttpContext.User.FindFirstValue(ClaimTypes.NameIdentifier);
             var user = await _userManager.FindByIdAsync(id);
+
+            var hibpResult = await _mediator.Send(new CheckPasswordAgainstHIBPCommand(_model.NewPassword));
+
+            if (!hibpResult.IsSuccess)
+            {
+                foreach (var error in hibpResult.Errors)
+                {
+                    _notificationService.Notify(severity: NotificationSeverity.Error, duration: 6000, summary: "Password found in leaked passwords database. Please try a different password, ideally one generated via a password manager");
+                }
+
+                _model = new ChangePasswordModel();
+
+                _isLoading = false;
+
+                StateHasChanged();
+
+                return;
+            }
+
             var result = await _userManager.ChangePasswordAsync(user, _model.OldPassword, _model.NewPassword);
 
             if (result.Succeeded)
@@ -116,6 +140,8 @@ else
         {
             _notificationService.Notify(NotificationSeverity.Error, "Sorry, something appears to have gone wrong, please contact support");
         }
+
+        _model = new ChangePasswordModel();
 
         _isLoading = false;
 
