--- a/src/Churchee.Module.Identity/Components/ProfileNav.razor
+++ b/src/Churchee.Module.Identity/Components/ProfileNav.razor
@@ -2,6 +2,7 @@
     <RadzenPanelMenuItem Text="Email" Path="/management/profile/email" Icon="email"></RadzenPanelMenuItem>
     <RadzenPanelMenuItem Text="Password" Path="/management/profile/password" Icon="password"></RadzenPanelMenuItem>
     <RadzenPanelMenuItem Text="Multi-Factor Authentication" Path="/management/profile/mfa" Icon="phonelink_lock"></RadzenPanelMenuItem>
+    <RadzenPanelMenuItem Text="Debug" Path="/management/profile/debug" Icon="troubleshoot"></RadzenPanelMenuItem>
 </RadzenPanelMenu>
 
 @code {
