Fixed 2FA Churchee Logo

--- a/src/Churchee.Module.Identity/Areas/Account/Pages/LoginWith2fa.cshtml
+++ b/src/Churchee.Module.Identity/Areas/Account/Pages/LoginWith2fa.cshtml
@@ -14,7 +14,7 @@
 
         <form method="post" asp-route-returnUrl="@Model.ReturnUrl">
 
-            <h1>Log in to: <strong>Churchee</strong></h1>
+            <h1>Log in to: <a href="/"><img class="logo" src="/img/churchee-gradient.svg" alt="churchee logo with a blue gradient" /></a></h1>
             <hr />
             @Html.AntiForgeryToken()
 
