--- a/src/Churchee.Module.Identity/Areas/Configuration/Pages/Contributors/Create.razor
+++ b/src/Churchee.Module.Identity/Areas/Configuration/Pages/Contributors/Create.razor
@@ -73,6 +73,8 @@
 
         var rolesNames = InputModel.Roles.Items.Where(w => InputModel.Roles.SelectedValues.Contains(w.Value)).Select(s => s.Text).ToList();
 
+        await UserManager.AddClaimAsync(newUser, new Claim("ActiveTenantId", activeTenant.ToString()));
+
         await UserManager.AddToRolesAsync(newUser, rolesNames);
 
         var addPasswordResult = await UserManager.AddPasswordAsync(newUser, InputModel.Password);
